fix: change sizes page1

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -29,11 +29,11 @@
                     <li class="header-li"><a href="#contacts" class="header-link">Contacts</a></li>
                 </ul>
             </nav>
-            <div class="hamburger" id="hamburger">
+            <div class="hamburger">
                 <span class="line"></span>
                 <span class="line"></span>
                 <span class="line"></span>
-            </div>s
+            </div>
         </div>
     </header>
 
@@ -59,6 +59,7 @@
                 </div>
             </div>
         </section>
+
         <section class="about" id="about">
             <div class="container about-container">
                 <div class="about-block">
@@ -87,6 +88,7 @@
                             they become attached to the pets and would hardly ever leave them alone.</p>
                     </div>
                 </div>
+            </div>
         </section>
 
 
@@ -125,16 +127,16 @@
                                                 as long as you are the one. She is picky about her affection. She loves
                                                 cuddles and to stretch into your hands for a deeper relaxations.</p>
                                             <ul class="modal-ul">
-                                                <li><span class="modal-span1">Age:</span>
+                                                <li class="modal-li"><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li><span class="modal-span1">Inoculations:</span>
+                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li><span class="modal-span1">Diseases:</span>
+                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li><span class="modal-span1">Parasites:</span>
+                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -171,16 +173,16 @@
                                                 but won't hesitate to play up a storm in the house if she has all of her
                                                 favorite toys.</p>
                                             <ul class="modal-ul">
-                                                <li><span class="modal-span1">Age:</span>
+                                                <li class="modal-li"><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li><span class="modal-span1">Inoculations:</span>
+                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li><span class="modal-span1">Diseases:</span>
+                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li><span class="modal-span1">Parasites:</span>
+                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
@@ -215,16 +217,16 @@
                                                 new
                                                 family that can spend a lot of time with him.</p>
                                             <ul class="modal-ul">
-                                                <li><span class="modal-span1">Age:</span>
+                                                <li class="modal-li"><span class="modal-span1">Age:</span>
                                                     <span class="modal-span2"> 2 months</span>
                                                 </li>
-                                                <li><span class="modal-span1">Inoculations:</span>
+                                                <li class="modal-li"><span class="modal-span1">Inoculations:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li><span class="modal-span1">Diseases:</span>
+                                                <li class="modal-li"><span class="modal-span1">Diseases:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
-                                                <li><span class="modal-span1">Parasites:</span>
+                                                <li class="modal-li"><span class="modal-span1">Parasites:</span>
                                                     <span class="modal-span2"> none</span>
                                                 </li>
                                             </ul>
