fix: change button links

--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -18,14 +18,21 @@
     <header class="header">
         <div class="container header-container">
             <div>
-                <h1 class="logo-title">Cozy House</h1>
-                <p class="logo-subtitle">Shelter for pets in Boston</p>
+                <a href="../main/index.html" class="logo-link-title" target="blank">
+                    <h1 class="logo-title">Cozy
+                        House</h1>
+                </a>
+                <a href="../main/index.html" class="logo-link-subtitle" target="blank">
+                    <p class="logo-subtitle">Shelter
+                        for pets
+                        in Boston</p>
+                </a>
             </div>
             <nav class="header-nav">
                 <ul class="header-ul">
                     <li class="header-li"><a href="../main/index.html" target="blank" class="header-link">About the
                             shelter</a></li>
-                    <li class="header-li"><a href="#pets" class="header-link bottom">Our pets</a></li>
+                    <li class="header-li"><a href="#" class="header-link bottom">Our pets</a></li>
                     <li class="header-li"><a href="../main/index.html#help" target="blank" class="header-link">Help the
                             shelter</a></li>
                     <li class="header-li"><a href="../main/index.html#contacts" target="blank"
@@ -46,24 +53,23 @@
             <div class="container our-friends-container">
                 <div class="our-friends-block">
                     <h2 class="our-friends-title">Our friends who<br>are looking for a house</h2>
-
                     <div class="our-friends-catalog">
                         <div class="card-box">
-                            <!-- ------1----- -->
+
                             <div class="card card1">
                                 <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="">
                                 <h4 class="card-name">Katrine</h4>
-                                <button class="card-button"><a href="#openModal1" class="card-link">Learn
-                                        more</a></button>
-
+                                <form action="#openModal1">
+                                    <button class="card-button card-link">Learn
+                                        more</button>
+                                </form>
                                 <div id="openModal1" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
-                                        <button class="close">
-                                            <a href="#close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="">
-                                            </a>
-                                        </button>
+                                        <form action="#close">
+                                            <button class="close" title="Закрыть"><img
+                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                        </form>
                                         <img src="../../assets/images/pets-katrine.jpg" class="modal-image" alt="">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Katrine</h2>
@@ -92,21 +98,21 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- ------2----- -->
+
                             <div class="card card2">
                                 <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
                                 <h4 class="card-name">Jennifer</h4>
-                                <button class="card-button"><a href="#openModal2" class="card-link">Learn
-                                        more</a></button>
-
+                                <form action="#openModal2">
+                                    <button class="card-button card-link">Learn
+                                        more</button>
+                                </form>
                                 <div id="openModal2" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
-                                        <button class="close">
-                                            <a href="#close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="">
-                                            </a>
-                                        </button>
+                                        <form action="#close">
+                                            <button class="close" title="Закрыть"><img
+                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                        </form>
                                         <img src="../../assets/images/pets-jennifer.jpg" class="modal-image" alt="">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Jennifer</h2>
@@ -138,21 +144,21 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- ------3----- -->
+
                             <div class="card card3">
                                 <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="">
                                 <h4 class="card-name">Woody</h4>
-                                <button class="card-button"><a href="#openModal3" class="card-link">Learn
-                                        more</a></button>
-
+                                <form action="#openModal3">
+                                    <button class="card-button card-link">Learn
+                                        more</button>
+                                </form>
                                 <div id="openModal3" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
-                                        <button class="close">
-                                            <a href="#close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="">
-                                            </a>
-                                        </button>
+                                        <form action="#close">
+                                            <button class="close" title="Закрыть"><img
+                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                        </form>
                                         <img src="../../assets/images/pets-woody.jpg" class="modal-image" alt="">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Woody</h2>
@@ -182,21 +188,21 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- ------4----- -->
+
                             <div class="card card4">
                                 <img src="../../assets/images/pets-sophia.jpg" class="card-image" alt="">
                                 <h4 class="card-name">Sophia</h4>
-                                <button class="card-button"><a href="#openModal4" class="card-link">Learn
-                                        more</a></button>
-
+                                <form action="#openModal4">
+                                    <button class="card-button card-link">Learn
+                                        more</button>
+                                </form>
                                 <div id="openModal4" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
-                                        <button class="close">
-                                            <a href="#close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="">
-                                            </a>
-                                        </button>
+                                        <form action="#close">
+                                            <button class="close" title="Закрыть"><img
+                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                        </form>
                                         <img src="../../assets/images/pets-sophia.jpg" class="modal-image" alt="">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Sophia</h2>
@@ -230,21 +236,21 @@
 
                     <div class="our-friends-catalog">
                         <div class="card-box">
-                            <!-- ------5----- -->
+
                             <div class="card card5">
                                 <img src="../../assets/images/pets-timmy.jpg" class="card-image" alt="">
                                 <h4 class="card-name">Timmy</h4>
-                                <button class="card-button"><a href="#openModal5" class="card-link">Learn
-                                        more</a></button>
-
+                                <form action="#openModal5">
+                                    <button class="card-button card-link">Learn
+                                        more</button>
+                                </form>
                                 <div id="openModal5" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
-                                        <button class="close">
-                                            <a href="#close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="">
-                                            </a>
-                                        </button>
+                                        <form action="#close">
+                                            <button class="close" title="Закрыть"><img
+                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                        </form>
                                         <img src="../../assets/images/pets-timmy.jpg" class="modal-image" alt="">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Timmy</h2>
@@ -273,21 +279,21 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- ------6----- -->
+
                             <div class="card card6">
                                 <img src="../../assets/images/pets-charly.jpg" class="card-image" alt="">
                                 <h4 class="card-name">Charly</h4>
-                                <button class="card-button"><a href="#openModal6" class="card-link">Learn
-                                        more</a></button>
-
+                                <form action="#openModal6">
+                                    <button class="card-button card-link">Learn
+                                        more</button>
+                                </form>
                                 <div id="openModal6" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
-                                        <button class="close">
-                                            <a href="#close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="">
-                                            </a>
-                                        </button>
+                                        <form action="#close">
+                                            <button class="close" title="Закрыть"><img
+                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                        </form>
                                         <img src="../../assets/images/pets-charly.jpg" class="modal-image" alt="">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Charly</h2>
@@ -316,21 +322,21 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- ------7----- -->
+
                             <div class="card card7">
                                 <img src="../../assets/images/pets-scarlet.jpg" class="card-image" alt="">
                                 <h4 class="card-name">Scarlett</h4>
-                                <button class="card-button"><a href="#openModal7" class="card-link">Learn
-                                        more</a></button>
-
+                                <form action="#openModal7">
+                                    <button class="card-button card-link">Learn
+                                        more</button>
+                                </form>
                                 <div id="openModal7" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
-                                        <button class="close">
-                                            <a href="#close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="">
-                                            </a>
-                                        </button>
+                                        <form action="#close">
+                                            <button class="close" title="Закрыть"><img
+                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                        </form>
                                         <img src="../../assets/images/pets-scarlet.jpg" class="modal-image" alt="">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Scarlett</h2>
@@ -360,21 +366,21 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- ------8----- -->
+
                             <div class="card card8">
                                 <img src="../../assets/images/pets-freddie.jpg" class="card-image" alt="">
                                 <h4 class="card-name">Freddie</h4>
-                                <button class="card-button"><a href="#openModal8" class="card-link">Learn
-                                        more</a></button>
-
+                                <form action="#openModal8">
+                                    <button class="card-button card-link">Learn
+                                        more</button>
+                                </form>
                                 <div id="openModal8" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
-                                        <button class="close">
-                                            <a href="#close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="">
-                                            </a>
-                                        </button>
+                                        <form action="#close">
+                                            <button class="close" title="Закрыть"><img
+                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                        </form>
                                         <img src="../../assets/images/pets-freddie.jpg" class="modal-image" alt="">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Freddie</h2>
@@ -441,7 +447,7 @@
                     </div>
                     <div class="link-box-contacts">
                         <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts-phone" alt="">
-                        <a href="tel:+13 674 567 75 54" class="footer-link link-tel">+13 674 567 75 54</a>
+                        <a href="" class="footer-link link-tel">+13 674 567 75 54</a>
                     </div>
                 </div>
                 <div class="locations">
