--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -23,8 +23,9 @@
             </div>
             <nav class="header-nav">
                 <ul class="header-ul">
-                    <li class="header-li"><a href="#about" class="header-link bottom">About the shelter</a></li>
-                    <li class="header-li"><a href="#pets" class="header-link">Our pets</a></li>
+                    <li class="header-li"><a href="#" class="header-link bottom">About the shelter</a></li>
+                    <li class="header-li"><a href="../pets/index2.html" class="header-link" target="blank">Our pets</a>
+                    </li>
                     <li class="header-li"><a href="#help" class="header-link">Help the shelter</a></li>
                     <li class="header-li"><a href="#contacts" class="header-link">Contacts</a></li>
                 </ul>
@@ -42,15 +43,18 @@
             <div class="container not-only-container">
                 <div class="not-only-block">
                     <div class="not-only-content">
-                        <h1 class="not-only-title">Not only people<br>need a house</h1>
+                        <h2 class="not-only-title">Not only people<br>need a house</h2>
                         <p class="not-only-text">
                             We offer to give a chance to a little and nice puppy with an extremely wide and open heart.
                             He
                             or she will love you more than anybody else in the world, you will see!
                         </p>
-                        <button class="not-only-button"><a href="#pets" class="not-only-button-link">Make a
-                                friend</a></button>
+                        <form action="../pets/index2.html" target="_blank">
+                            <button class="not-only-button not-only-link">Make a
+                                friend</button>
+                        </form>
                     </div>
+
                     <div>
                         <img src="../../assets/images/puppy-1280.png" class="not-only-image1" alt="">
                         <img src="../../assets/images/puppy-768.png" class="not-only-image2" alt="">
@@ -105,17 +109,17 @@
                             <div class="card card1">
                                 <img src="../../assets/images/pets-katrine.jpg" class="card-image" alt="">
                                 <h4 class="card-name">Katrine</h4>
-                                <button class="card-button"><a href="#openModal1" class="card-link">Learn
-                                        more</a></button>
-                                <!-- ------ modal -------->
+                                <form action="#openModal1">
+                                    <button class="card-button card-link">Learn
+                                        more</button>
+                                </form>
                                 <div id="openModal1" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
-                                        <button class="close">
-                                            <a href="#close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="">
-                                            </a>
-                                        </button>
+                                        <form action="#close">
+                                            <button class="close" title="Закрыть"><img
+                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                        </form>
                                         <img src="../../assets/images/pets-katrine.jpg" class="modal-image" alt="">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Katrine</h2>
@@ -143,22 +147,22 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- -------------------- -->
+
                             </div>
                             <div class="card card2">
                                 <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
                                 <h4 class="card-name">Jennifer</h4>
-                                <button class="card-button"><a href="#openModal2" class="card-link">Learn
-                                        more</a></button>
-                                <!-- ------ modal -------->
+                                <form action="#openModal2">
+                                    <button class="card-button card-link">Learn
+                                        more</button>
+                                </form>
                                 <div id="openModal2" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
-                                        <button class="close">
-                                            <a href="#close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="">
-                                            </a>
-                                        </button>
+                                        <form action="#close">
+                                            <button class="close" title="Закрыть"><img
+                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                        </form>
                                         <img src="../../assets/images/pets-jennifer.jpg" class="modal-image" alt="">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Jennifer</h2>
@@ -189,22 +193,22 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- -------------------- -->
+
                             </div>
                             <div class="card card3">
                                 <img src="../../assets/images/pets-woody.jpg" class="card-image" alt="">
                                 <h4 class="card-name">Woody</h4>
-                                <button class="card-button"><a href="#openModal3" class="card-link">Learn
-                                        more</a></button>
-                                <!-- ------ modal -------->
+                                <form action="#openModal3">
+                                    <button class="card-button card-link">Learn
+                                        more</button>
+                                </form>
                                 <div id="openModal3" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
-                                        <button class="close">
-                                            <a href="#close" title="Закрыть"><img
-                                                    src="../../assets/icons/modal-close.svg" alt="">
-                                            </a>
-                                        </button>
+                                        <form action="#close">
+                                            <button class="close" title="Закрыть"><img
+                                                    src="../../assets/icons/modal-close.svg" alt=""></button>
+                                        </form>
                                         <img src="../../assets/images/pets-woody.jpg" class="modal-image" alt="">
                                         <div class="modal-box">
                                             <h2 class="modal-title">Woody</h2>
@@ -247,11 +251,12 @@
                             <img src="../../assets/icons/arrow2.svg" alt="">
                         </button>
                     </div>
-                    <button class="our-friends-button"><a href="../pets/index2.html#pets" target="blank"
-                            class="our-friends-button-link">Get
+                    <form action="../pets/index2.html" target="_blank">
+                        <button class="our-friends-button our-friends-link">Get
                             to
                             know the
-                            rest</a></button>
+                            rest</button>
+                    </form>
                 </div>
             </div>
         </section>
@@ -308,9 +313,10 @@
                     <div class="in-addition-content">
                         <h2 class="in-addition-title">You can also<br>make a donation</h2>
                         <p class="in-addition-text">Name of the bank / Type of bank account</p>
-                        <button class="credit-button credit-icon"><a href="8380 2880 8028 8791 7435"
-                                class="credit-link">8380 2880 8028 8791
-                                7435</a></button>
+                        <form action="#no_scroll">
+                            <button class="credit-button credit-icon credit-link">8380 2880 8028 8791
+                                7435</button>
+                        </form>
                         <p class="in-addition-text-transparent">Legal information and lorem ipsum dolor sit amet,
                             consectetur adipiscing
                             elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus
