feat: add favicon

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -10,17 +10,20 @@
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./style-adaptive.css">
-    <!-- <link rel="icon" href="./assets/favicon.ico"> -->
-    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
+    <link rel="icon" href="../../assets/icons/dog-favicon.ico">
 </head>
 
 <body>
     <header class="header">
         <div class="container header-container">
-            <div>
+            <div class="logo1">
                 <h1 class="logo-title">Cozy House</h1>
                 <p class="logo-subtitle">Shelter for pets in Boston</p>
             </div>
+            <!-- <div class="logo2">
+                <h1 class="logo-title">Cozy House</h1>
+                <p class="logo-subtitle">Shelter for pets in Boston</p>
+            </div> -->
             <nav class="header-nav">
                 <ul class="header-ul">
                     <li class="header-li"><a href="#" class="header-link bottom">About the shelter</a></li>
@@ -113,6 +116,7 @@
                                     <button class="card-button card-link">Learn
                                         more</button>
                                 </form>
+
                                 <div id="openModal1" class="modal-block">
                                     <a href="#close" class="close-all"></a>
                                     <div class="modal-content">
@@ -126,9 +130,11 @@
                                             <p class="modal-subtitle">Cat - British Shorthair</p>
                                             <p class="modal-text">Katrine is a beautiful girl. She is as soft as the
                                                 finest
-                                                velvet with a thick lush fur. Will love you until the last breath she
+                                                velvet with a thick lush fur. Will love you until the last breath
+                                                she
                                                 takes
-                                                as long as you are the one. She is picky about her affection. She loves
+                                                as long as you are the one. She is picky about her affection. She
+                                                loves
                                                 cuddles and to stretch into your hands for a deeper relaxations.</p>
                                             <ul class="modal-ul">
                                                 <li class="modal-li"><span class="modal-span1">Age:</span>
@@ -147,7 +153,6 @@
                                         </div>
                                     </div>
                                 </div>
-
                             </div>
                             <div class="card card2">
                                 <img src="../../assets/images/pets-jennifer.jpg" class="card-image" alt="">
@@ -171,10 +176,12 @@
                                                 patiently waiting to
                                                 find a
                                                 new
-                                                forever home. This girl really enjoys being able to go outside to run
+                                                forever home. This girl really enjoys being able to go outside to
+                                                run
                                                 and
                                                 play,
-                                                but won't hesitate to play up a storm in the house if she has all of her
+                                                but won't hesitate to play up a storm in the house if she has all of
+                                                her
                                                 favorite toys.</p>
                                             <ul class="modal-ul">
                                                 <li class="modal-li"><span class="modal-span1">Age:</span>
@@ -215,9 +222,11 @@
                                             <p class="modal-subtitle">Dog - Golden Retriever</p>
                                             <p class="modal-text">Woody is a handsome 3 1/2 year old boy. Woody does
                                                 know
-                                                basic commands and is a smart pup. Since he is on the stronger side, he
+                                                basic commands and is a smart pup. Since he is on the stronger side,
+                                                he
                                                 will
-                                                learn a lot from your training. Woody will be happier when he finds a
+                                                learn a lot from your training. Woody will be happier when he finds
+                                                a
                                                 new
                                                 family that can spend a lot of time with him.</p>
                                             <ul class="modal-ul">
@@ -327,6 +336,12 @@
         </section>
     </main>
 
+
+
+    <!-- <a href="#">
+        <img src="#">
+        <span>текст</span>
+    </a> -->
     <footer class="footer">
         <div class="container footer-container">
             <div class="footer-block">
@@ -344,7 +359,7 @@
                 <div class="locations">
                     <h2 class="footer-title title-locations">We are waiting for your visit</h2>
                     <div class="link-box-locations">
-                        <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="">
+                        <img src="../../assets/icons/icon-map.svg" alt="">
                         <a target="_blank"
                             href="https://www.google.com/maps/place/1+Central+St,+Boston,+MA+02109,+%D0%A1%D0%A8%D0%90/@42.358552,-71.054726,16z/data=!4m5!3m4!1s0x89e370868bc2ce7b:0x82fa7db94f5fea9e!8m2!3d42.3585519!4d-71.0547263?hl=ru"
                             class="footer-link link-map">1
