--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -453,7 +453,7 @@
                 <div class="locations">
                     <h2 class="footer-title title-locations">We are waiting for your visit</h2>
                     <div class="link-box-locations">
-                        <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="">
+                        <img src="../../assets/icons/icon-map.svg" alt="">
                         <a target="_blank"
                             href="https://www.google.com/maps/place/1+Central+St,+Boston,+MA+02109,+%D0%A1%D0%A8%D0%90/@42.358552,-71.054726,16z/data=!4m5!3m4!1s0x89e370868bc2ce7b:0x82fa7db94f5fea9e!8m2!3d42.3585519!4d-71.0547263?hl=ru"
                             class="footer-link link-map">1
@@ -461,7 +461,7 @@
                         </a>
                     </div>
                     <div class="link-box-locations">
-                        <img src="../../assets/icons/icon-map.svg" class="footer-icon-locations" alt="">
+                        <img src="../../assets/icons/icon-map.svg" alt="">
                         <a target="_blank"
                             href="https://www.google.com/maps/place/%D0%9F%D0%B0%D1%80%D0%BA+%D0%AE%D0%B3/@51.4899577,-0.2479026,11z/data=!4m9!1m2!2m1!1s18+South+Park,+London!3m5!1s0x48760f79376fa0e3:0x202ac3af5c1ea4ec!8m2!3d51.4691953!4d-0.1941945!15sChUxOCBTb3V0aCBQYXJrLCBMb25kb26SAQRwYXJr?hl=ru"
                             class="footer-link link-map2">18 South Park, London</a>
