feat: add logo burger

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -16,14 +16,10 @@
 <body>
     <header class="header">
         <div class="container header-container">
-            <div class="logo1">
+            <div class="logo">
                 <h1 class="logo-title">Cozy House</h1>
                 <p class="logo-subtitle">Shelter for pets in Boston</p>
             </div>
-            <!-- <div class="logo2">
-                <h1 class="logo-title">Cozy House</h1>
-                <p class="logo-subtitle">Shelter for pets in Boston</p>
-            </div> -->
             <nav class="header-nav">
                 <ul class="header-ul">
                     <li class="header-li"><a href="#" class="header-link bottom">About the shelter</a></li>
@@ -268,6 +264,31 @@
                     </form>
                 </div>
             </div>
+
+            <!-- ============================== -->
+            <!-- <div class="slider-container">
+                <div id="first" class="slides"><img src="../../assets/images/pets-charly.jpg" alt="" /></div>
+                <div id="second" class="slides"><img src="../../assets/images/pets-freddie.jpg" alt="" /></div>
+                <div id="third" class="slides"><img src="../../assets/images/pets-jennifer.jpg" alt="" /></div>
+            </div>
+            <input id="img_1" class="slide_img" checked="checked" name="slide_img" type="radio" />
+            <input id="img_2" class="slide_img" name="slide_img" type="radio" />
+            <input id="img_3" class="slide_img" name="slide_img" type="radio" />
+            <div id="arrow_next">
+                <label for="img_1"><i class="fa fa-angle-right" aria-hidden="true"></i></label>
+                <label for="img_2"><i class="fa fa-angle-right" aria-hidden="true"></i></label>
+                <label for="img_3"><i class="fa fa-angle-right" aria-hidden="true"></i></label>
+            </div>
+            <div id="arrow_prev">
+                <label for="img_1"><i class="fa fa-angle-left" aria-hidden="true"></i></label>
+                <label for="img_2"><i class="fa fa-angle-left" aria-hidden="true"></i></label>
+                <label for="img_3"><i class="fa fa-angle-left" aria-hidden="true"></i></label>
+            </div>
+            <div class="switchers">
+                <label id="switcher1" class="switcher" for="img_1"></label>
+                <label id="switcher2" class="switcher" for="img_2"></label>
+                <label id="switcher3" class="switcher" for="img_3"></label>
+            </div> -->
         </section>
 
         <section class="help" id="help">
