--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -10,14 +10,13 @@
     <link rel="stylesheet" href="./normalize.css">
     <link rel="stylesheet" href="./style2.css">
     <link rel="stylesheet" href="./style-adaptive2.css">
-    <!-- <link rel="icon" href="./assets/favicon.ico"> -->
-    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> -->
+    <link rel="icon" href="../../assets/icons/dog-favicon.ico">
 </head>
 
 <body>
     <header class="header">
         <div class="container header-container">
-            <div>
+            <div class="logo">
                 <a href="../main/index.html" class="logo-link-title" target="blank">
                     <h1 class="logo-title">Cozy
                         House</h1>
