feat: add link phone

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -371,7 +371,7 @@
                     </div>
                     <div class="link-box-contacts">
                         <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts-phone" alt="phone">
-                        <a href="" class="footer-link link-tel">+13 674 567 75 54</a>
+                        <a href="tel:+13 674 567 75 54" class="footer-link link-tel">+13 674 567 75 54</a>
                     </div>
                 </div>
                 <div class="locations">
