fix: change link pets

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -48,7 +48,8 @@
                             He
                             or she will love you more than anybody else in the world, you will see!
                         </p>
-                        <form action="../pets/index2.html" target="_blank">
+                        <!-- <form action="../pets/index2.html" target="_blank"> -->
+                        <form action="../main/index.html#pets">
                             <button class="not-only-button not-only-link">Make a
                                 friend</button>
                         </form>
