fix: change link contacts

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -361,7 +361,7 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer" id="contacts">
         <div class="container footer-container">
             <div class="footer-block">
                 <div class="contacts">
