--- a/shelter/pages/pets/index2.html
+++ b/shelter/pages/pets/index2.html
@@ -34,8 +34,7 @@
                     <li class="header-li"><a href="#" class="header-link bottom">Our pets</a></li>
                     <li class="header-li"><a href="../main/index.html#help" target="blank" class="header-link">Help the
                             shelter</a></li>
-                    <li class="header-li"><a href="../main/index.html#contacts" target="blank"
-                            class="header-link">Contacts</a></li>
+                    <li class="header-li"><a href="#contacts" class="header-link">Contacts</a></li>
                 </ul>
             </nav>
             <div class="hamburger" id="hamburger">
@@ -439,7 +438,7 @@
     </main>
 
 
-    <footer class="footer">
+    <footer class="footer" id="contacts">
         <div class="container footer-container">
             <div class="footer-block">
                 <div class="contacts">
