fix: clean code

--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -346,11 +346,14 @@
                     <div class="in-addition-content">
                         <h2 class="in-addition-title">You can also<br>make a donation</h2>
                         <p class="in-addition-text">Name of the bank / Type of bank account</p>
-                        <form action="#">
-                            <!-- <form action="#no_scroll"> -->
+                        <!-- <form action="#no_scroll">
                             <button class="credit-button credit-icon credit-link">8380 2880 8028 8791
                                 7435</button>
-                        </form>
+                        </form> -->
+
+                        <button class="credit-button credit-icon"><a href="##" class="credit-link">8380 2880 8028 8791
+                                7435</a></button>
+
                         <p class="in-addition-text-transparent">Legal information and lorem ipsum dolor sit amet,
                             consectetur adipiscing
                             elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus
@@ -372,7 +375,7 @@
                     </div>
                     <div class="link-box-contacts">
                         <img src="../../assets/icons/icon-phone.svg" class="footer-icon-contacts-phone" alt="phone">
-                        <a href="tel:+13 674 567 75 54" class="footer-link link-tel">+13 674 567 75 54</a>
+                        <a href="tel:" class="footer-link link-tel">+13 674 567 75 54</a>
                     </div>
                 </div>
                 <div class="locations">
