--- a/shelter/pages/main/index.html
+++ b/shelter/pages/main/index.html
@@ -348,8 +348,14 @@
                             <button class="credit-button credit-icon credit-link">8380 2880 8028 8791
                                 7435</button>
                         </form> -->
-                        <button class="credit-button credit-icon"><a href="##" class="credit-link">8380 2880 8028 8791
-                                7435</a></button>
+                        <!-- <a href="javascript:void(0)" class="donation-link">
+                            <img src="../../assets/images/credit-card.svg" alt="credit card">
+                            <span>8380 2880 8028 8791 7435</span>
+                        </a> -->
+                        <!-- <div class="credit-button credit-icon"> -->
+                        <a href="javascript:void(0)" class="credit-link credit-button credit-icon">8380 2880 8028 8791
+                            7435</a>
+                        <!-- </div> -->
                         <p class="in-addition-text-transparent">Legal information and lorem ipsum dolor sit amet,
                             consectetur adipiscing
                             elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. Praesent ultrices maximus
